# OO2026Viikkotehtavat

./: README.md
Testailut/: CMakeLists.txt  main.c
Viikko1/arvauspeli/: CMakeLists.txt  main.cpp
Viikko1/olio_qt/: CMakeLists.txt
Viikko2/Viikkotehtävä 2/Arvauspeli_OO/: CMakeLists.txt  arvauspeli.cpp  arvauspeli.h  main.cpp
Viikko2/luento_esimerkit/: dht.h  lcd.cpp  random.cpp  random.h
Viikko2/randomgem/: CMakeLists.txt  dht.cpp  lcd.cpp  main.cpp
Viikko3/ItalianChef/: CMakeLists.txt  italianchef.cpp  italianchef.h  main.cpp
Viikko4/Pankkitilit_viikkotehtava/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Viikko5/Notifikaattori/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikko6/Viikkotehtava_6_Student/: CMakeLists.txt  main.cpp  student.cpp  student.h
Viikko6/viikon6esim/: CMakeLists.txt  main.cpp  student.cpp  student.h
Viikko7/QT_Widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko8/Shakkikello/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
