cmake_minimum_required(VERSION 3.16)

project(Viikkotehtava_6_Student LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Viikkotehtava_6_Student main.cpp
    student.h student.cpp)

include(GNUInstallDirs)
install(TARGETS Viikkotehtava_6_Student
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
